--- a/style.css
+++ b/style.css
@@ -17,6 +17,24 @@
     color: black; /* Цвет текста */
 }
 
+/* Мобильные стили */
+@media (max-width: 600px) {
+  .game {
+      width: 100%; /* Ширина на мобильных устройствах занимает 100% */
+      height: auto; /* Высота будет автоматически подстраиваться */
+      max-height: 50vh; /* Максимальная высота 50% от высоты экрана */
+      border: 1px solid rgb(122,122,122);
+      margin: auto;
+      box-sizing: border-box; /* Учитываем рамку в общей ширине и высоте */
+  }
+
+  #timer {
+      right: 20px; /* Уменьшаем отступ справа для мобильных устройств */
+      font-size: 24px; /* Уменьшаем размер шрифта для мобильных устройств */
+      top: 10px; /* Уменьшаем отступ сверху для мобильных устройств */
+  }
+}
+
   #dino {
     /* ширина и высота динозаврика */
     width: 50px;
